<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_first_page">


    <ImageView
        android:id="@+id/imageView"
        android:contentDescription="@string/logo_first_page"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:background="@drawable/logo_first_page" />

    <LinearLayout
        android:id="@+id/layou_factory"
        android:layout_width="@dimen/_140sdp"
        android:layout_height="@dimen/_120sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginTop="15dp"
        android:adjustViewBounds="true"
        android:background="@drawable/back"
        android:orientation="vertical"
        android:scaleType="fitCenter"
        android:layout_below="@+id/imageView"
        android:layout_toEndOf="@+id/layout_singel_register">


        <ImageView
            android:id="@+id/factoryImage"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:contentDescription="@string/sooady_factores"
            android:background="@drawable/back"
            android:paddingBottom="@dimen/_5sdp"
            android:paddingStart="@dimen/_15sdp"
            android:paddingEnd="@dimen/_15sdp"
            android:paddingTop="@dimen/_15sdp"
            android:scaleType="fitCenter"
            android:src="@drawable/factory" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/sooady_factores"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="20sp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/productesImage_layout"
        android:layout_width="@dimen/_140sdp"
        android:layout_height="@dimen/_120sdp"
         android:adjustViewBounds="true"
        android:background="@drawable/back3"
        android:orientation="vertical"
        android:scaleType="fitCenter"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_alignTop="@+id/layou_factory"
        android:layout_alignParentStart="true">


        <ImageView
            android:id="@+id/productesImages"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:contentDescription="@string/prodectes"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:paddingBottom="@dimen/_5sdp"
            android:paddingStart="@dimen/_15sdp"
            android:paddingEnd="@dimen/_15sdp"
            android:paddingTop="@dimen/_15sdp"
            android:scaleType="fitCenter"

            android:src="@drawable/industrial_robot" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_7sdp"
            android:text="@string/prodectes"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_singel_register"
        android:layout_width="@dimen/_140sdp"
        android:layout_height="@dimen/_120sdp"
        android:layout_alignStart="@+id/productesImage_layout"
        android:layout_below="@+id/productesImage_layout"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginTop="11dp"
        android:adjustViewBounds="true"
        android:background="@drawable/bac2"
        android:orientation="vertical"
        android:scaleType="fitCenter">


        <ImageView
            android:id="@+id/singil_register_Image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:contentDescription="@string/singel_register"
            android:paddingBottom="@dimen/_5sdp"
            android:paddingStart="@dimen/_15sdp"
            android:paddingEnd="@dimen/_15sdp"
            android:paddingTop="@dimen/_15sdp"
            android:scaleType="fitCenter"

            android:src="@drawable/man1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_7sdp"
            android:text="@string/singel_register"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="20sp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/layout_moassa_register"
        android:layout_width="@dimen/_140sdp"
        android:layout_height="@dimen/_120sdp"
        android:adjustViewBounds="true"
        android:background="@drawable/back4"
        android:layout_marginEnd="@dimen/_15sdp"
        android:orientation="vertical"
        android:scaleType="fitCenter"
        android:layout_alignTop="@+id/layout_singel_register"
        android:layout_toEndOf="@+id/layout_singel_register">


        <ImageView
            android:id="@+id/moassa_registerImage"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:contentDescription="@string/moassa_register"
            android:adjustViewBounds="true"
            android:paddingBottom="@dimen/_5sdp"
            android:paddingStart="@dimen/_15sdp"
            android:paddingEnd="@dimen/_15sdp"
            android:paddingTop="@dimen/_15sdp"
            android:scaleType="fitCenter"

            android:src="@drawable/team" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_7sdp"
            android:text="@string/moassa_register"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="20sp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/layot_factory_parts"
        android:layout_width="@dimen/_140sdp"
        android:layout_height="@dimen/_120sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginTop="12dp"
        android:adjustViewBounds="true"
        android:background="@drawable/back3"
        android:orientation="vertical"
        android:scaleType="fitCenter"
        android:layout_below="@+id/layout_singel_register"
        android:layout_alignStart="@+id/layout_singel_register">


        <ImageView
            android:id="@+id/productesImage"
            android:contentDescription="@string/factory_parts"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingBottom="@dimen/_5sdp"
            android:paddingStart="@dimen/_15sdp"
            android:paddingEnd="@dimen/_15sdp"
            android:paddingTop="@dimen/_15sdp"
            android:adjustViewBounds="true"
             android:scaleType="fitCenter"

            android:src="@drawable/industrial_robot_t" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             android:padding="@dimen/_7sdp"
            android:text="@string/factory_parts"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="20sp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/layout_supports"
        android:layout_width="@dimen/_140sdp"
        android:layout_height="@dimen/_120sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:adjustViewBounds="true"
        android:background="@drawable/back"
        android:orientation="vertical"
        android:scaleType="fitCenter"
        android:layout_alignTop="@+id/layot_factory_parts"
        android:layout_toEndOf="@+id/layot_factory_parts">


        <ImageView
            android:id="@+id/over_view_factorsImage"
            android:contentDescription="@string/support"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
             android:scaleType="fitCenter"
            android:paddingBottom="@dimen/_5sdp"
            android:paddingStart="@dimen/_15sdp"
            android:paddingEnd="@dimen/_15sdp"
            android:paddingTop="@dimen/_15sdp"
            android:src="@drawable/support_tools" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             android:padding="@dimen/_7sdp"
            android:text="@string/support"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="20sp" />

    </LinearLayout>


</RelativeLayout>